--- a/mosi/views/abtest/templates/abtest_test.jinja
+++ b/mosi/views/abtest/templates/abtest_test.jinja
@@ -22,47 +22,44 @@
         </div>
     </div>
 
-    <div id="mosUI">
+    <div id="abtestUI">
         <div class='row'>
             <div class='col-xl-6 col-md-8 offset-xl-3 offset-md-2 col-12 mb-2'>
-                {% if mos.help_text %}
+                {% if abtest.help_text %}
                     <p class="pt-2">{{ abtest.help_text }}</p>
                 {% endif %}
             </div>
             <div class='col-xl-6 col-md-8 offset-xl-3 offset-md-2 col-12 mb-2'>
-                {% include 'mos_token_card.jinja' %}
+                {% include 'abtest_token_card.jinja' %}
             </div>
         </div>
         <div class='row mt-2'>
-            <div class='col-12 text-center'>
-                <audio id="audio-recording" src={{recordings_url[0]}} type="audio/wav"></audio>
-                <button type='button' id="play" class='btn btn-success rounded-pill'>
-                    <i id='playButtonIcon' class='fa fa-play'></i>
+            <div class='col-6 text-center'>
+                <audio id="audio-recording" src={{audio_data[0].first.url}} type="audio/wav"></audio>
+                <button type='button' id="play-first" class='btn btn-success rounded-pill p-3'>
+                    <i id='playButtonIcon_first' class='fa fa-play'></i> A
+                </button>
+            </div>
+            <div class='col-6 text-center'>
+                <audio id="audio-recording" src={{audio_data[0].second.url}} type="audio/wav"></audio>
+                <button type='button' id="play-second" class='btn btn-success rounded-pill p-3'>
+                    <i id='playButtonIcon_second' class='fa fa-play'></i> B
                 </button>
             </div>
         </div>
       <div class='my-4'>
-            {% if mos.question %}
+            {% if abtest.question %}
                 <div class='col-xl-6 col-md-8 offset-xl-3 offset-md-2 col-12 mb-4'>
-                    <h3>{{ mos.question }}</h3>
+                    <h3>{{ abtest.question }}</h3>
                 </div> 
             {% endif %}
             <form class="text-center" id="ratingButtons">
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                     <label class="btn btn-outline-primary center-block border-success rounded-pill-left" name="optionsLabel">
-                        <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option1" value="1">1
-                    </label>
-                    <label class="btn btn-outline-primary center-block border-success" name="optionsLabel">
-                        <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option2" value="2">2
-                    </label>
-                    <label class="btn btn-outline-primary center-block border-success" name="optionsLabel">
-                        <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option3" value="3">3
-                    </label>
-                    <label class="btn btn-outline-primary center-block border-success" name="optionsLabel">
-                        <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option4" value="4">4
+                        <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option1" value="1">A
                     </label>
                     <label class="btn btn-outline-primary center-block border-success rounded-pill-right" name="optionsLabel">
-                        <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option5" value="5">5
+                        <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option2" value="2">B
                     </label>
                 </div>
             </form>
@@ -93,12 +90,10 @@
     {{super()}}
     <script src='{{url_for("main.static", filename="js/error.js")}}'></script>
     <script type='text/javascript'>
-        var postRatingsRoute = "{{url_for('mos.post_mos_rating', id=mos.id)}}";
+        var postRatingsRoute = "{{url_for('abtest.post_abtest_rating', id=abtest.id)}}";
         var user_id = {{user.id}};
-        var mos_id = {{mos.id}}
-        var recordings = {{recordings}}
-        var recordings_url = {{recordings_url}}
-        var mos_list = {{json_mos}}
+        var abtest_id = {{abtest.id}}
+        var audio_json = {{audio_json}}
     </script>
     <script>
         'use strict';
@@ -118,8 +113,8 @@
         let stream;
         let meter;
 
-        var mosIndex = 0; // At what utterance are we now?
-        var numMosInstances = mos_list.length;
+        var abtestIndex = 0; // At what utterance are we now?
+        var numABTuples = audio_json.length;
 
         //token stuff
         const tokenText = document.querySelector("#tokenText");
@@ -134,7 +129,9 @@
         //buttons
         const nextButton = document.querySelector('button#next');
         const prevButton = document.querySelector('button#prev');
-        const playButton = document.querySelector('button#play');
+        const playButtonFirst = $('button#play-first');
+        const playButtonSecond = $('button#play-second');
+        const playButtonRef = $('button#play-ref');
         const finishButton = document.querySelector('button#send');
         const finishButtonIcon = $('#finishButtonIcon');
 
@@ -143,7 +140,8 @@
 
         //audio
         let recordingAudio = document.querySelector('audio#audio-recording');
-        let playButtonIcon = $('#playButtonIcon');
+        let playButtonIcon_first = $('#playButtonIcon_first');
+        let playButtonIcon_second = $('#playButtonIcon_second');
 
 
         const startTime = new Date();
@@ -152,7 +150,12 @@
         // ------------- register listeners ------------
         nextButton.addEventListener('click', nextAction);
         prevButton.addEventListener('click', prevAction);
-        playButton.addEventListener('click', playAction);
+
+        
+
+        playButtonFirst.on('click', {btn_num: 'first'}, playAction);
+        playButtonSecond.on('click', {btn_num: 'second'}, playAction);
+        playButtonRef.on('click', {btn_num: 'ref'}, playAction);
         finishButton.addEventListener('click', finishAction);
         $(window).keyup(function (e) {
             if (e.key === ' ' || e.key === 'Spacebar'  || e.keyCode === 38 || e.keyCode === 87) {
@@ -171,9 +174,9 @@
         // ---------------- Actions --------------------
         function nextAction(){
             // Increment the sentence index and update the UI
-            if(mosIndex < numMosInstances - 1 && !nextButton.disabled){
-                mosIndex += 1;
-                $( "#mosUI" ).animate({
+            if(abtestIndex < numABTuples - 1 && !nextButton.disabled){
+                abtestIndex += 1;
+                $( "#abtestUI" ).animate({
                     opacity: 0.0
                     }, 200, function() {
                         updateUI();
@@ -183,9 +186,9 @@
 
         function prevAction(){
             // Decrement the sentence index and update the UI
-            if(mosIndex > 0){
-                mosIndex -= 1;
-                $( "#mosUI" ).animate({
+            if(abtestIndex > 0){
+                abtestIndex -= 1;
+                $( "#abtestUI" ).animate({
                     opacity: 0.0
                     }, 200, function() {
                         updateUI();
@@ -194,10 +197,11 @@
         }
 
 
-        function playAction(){
+        function playAction(event){
+            var btn = event.data.btn_num
             // Play the recording for the sentence at the current index.
-            recordingAudio.src = recordings_url[mosIndex]
-            play(recordings[mosIndex].id)
+            recordingAudio.src = audio_json[abtestIndex][btn]['url']
+            play(audio_json[abtestIndex][btn].id, btn)
         }
 
         var isPlaying = false;
@@ -205,8 +209,21 @@
         var audio;
 
         function getRating(value){
-            mos_list[mosIndex]['rating'] = value
+            audio_json[abtestIndex]['rating'] = value
             setFinishButtonUI();
+        }
+
+        function setRatingsButtonsStatus(){
+            if (audio_json[abtestIndex]['reference']){
+                if(audio_json[abtestIndex]['first']['is_played'] && audio_json[abtestIndex]['second']['is_played'] && audio_json[abtestIndex]['reference']['is_played']){
+                    setRatingsButtonsOn()
+                }
+            }
+            else{
+                if(audio_json[abtestIndex]['first']['is_played'] && audio_json[abtestIndex]['second']['is_played']){
+                    setRatingsButtonsOn()
+                }
+            }
         }
 
         function setRatingsButtonsOn(){
@@ -224,16 +241,29 @@
                 $(buttons[i]).prop('disabled', true);
             }
         }
-        function play(id){
+        function play(id, btn){
+            var playButtonIcon_btn = playButtonIcon_first
+            if (btn == 'first'){
+                playButtonIcon_btn = playButtonIcon_first
+            }
+            else if(btn = "second"){
+                playButtonIcon_btn = playButtonIcon_second
+            }
+            else if (btn = "ref"){
+                playButtonIcon_btn = playButtonIcon_ref
+            }
+            else {
+                return 0
+            }
             if(isPlaying){
                 //stop
                 isPlaying = false;
-                playButtonIcon.removeClass('fa-stop').addClass('fa-play');
+                playButtonIcon_btn.removeClass('fa-stop').addClass('fa-play');
                 audio.pause();
                 audio.currentTime = 0;
                 // play the other clip if another id was chosen
                 if(id !== currentId){
-                    play(id);
+                    play(id, btn);
                 }
             } else{
                 //start
@@ -248,14 +278,14 @@
                     isPlaying = false;
                 }
                 audio.onended = function(){
-                    playButtonIcon.removeClass('fa-stop').addClass('fa-play');
-                    mos_list[mosIndex]['is_played'] = true;
-                    setRatingsButtonsOn();
+                    playButtonIcon_btn.removeClass('fa-stop').addClass('fa-play');
+                    audio_json[abtestIndex][btn]['is_played'] = true;
+                    setRatingsButtonsStatus();
                     setButtonUI();
                     setFinishButtonUI();
                 }
                 // play audio
-                playButtonIcon.removeClass('fa-play').addClass('fa-stop');
+                playButtonIcon_btn.removeClass('fa-play').addClass('fa-stop');
                 audio.play();
             }
         }
@@ -267,11 +297,11 @@
                     finishButtonIcon.removeClass('fa-spinner').removeClass('fa-spin');
                     if(xhr.status == '200'){
                         // if we finish we go straight to the session
-                        var mos_url = xhr.responseText;
+                        var abtest_url = xhr.responseText;
                         finishButtonIcon.addClass('fa-check');
 
                         window.onbeforeunload = null;
-                        window.location = mos_url;
+                        window.location = abtest_url;
                     } else{
                         finishButtonIcon.addClass('fa-times');
                         finishButton.classList.add('btn-danger');
@@ -280,14 +310,14 @@
                 }
                 finishButton.disabled = true;
             };
-            for(var i = 0; i < mos_list.length; i++){
-                mos_list[i]['placement'] = i + 1
+            for(var i = 0; i < audio_json.length; i++){
+                audio_json[i]['placement'] = i + 1
             }
             var fd = new FormData();
             fd.append('duration', JSON.stringify((new Date().getTime() - startTime.getTime())/1000));
             fd.append('user_id', user_id);
-            fd.append('mos_id', mos_id);
-            fd.append('mos_list', JSON.stringify(mos_list));
+            fd.append('abtest_id', abtest_id);
+            fd.append('abtest_list', JSON.stringify(audio_json));
             xhr.open("POST", postRatingsRoute, true);
             xhr.send(fd);
         }
@@ -296,28 +326,28 @@
         // ---------------- UI configuration --------------------
         async function updateUI(){
             setTokenUI();
-            setProgressUI(mosIndex + 1);
+            setProgressUI(abtestIndex + 1);
             setButtonUI();
             setFinishButtonUI();
             setRadioUI();
 
-            $( "#mosUI" ).animate({
+            $( "#abtestUI" ).animate({
                 opacity: 1.0
             }, 300);
         }
 
         function setProgressUI(i){
-            var ratio = (i / numMosInstances) * 100;
+            var ratio = (i / numABTuples) * 100;
             tokenProgress.style.width = `${ratio.toString()}%`;
             currentIndexSpan.innerHTML = i;
         }
 
 
         function setTokenUI(){
-            tokenText.innerHTML = mos_list[mosIndex]['text'];
-            if (mos_list[mosIndex]['token'] != null){
-                tokenfileIDSpan.innerHTML = mos_list[mosIndex]['token']['file_id'];
-                tokenHref.href = mos_list[mosIndex]['token']['url'];
+            tokenText.innerHTML = audio_json[abtestIndex]['token']['text'];
+            if (audio_json[abtestIndex]['token'] != null){
+                tokenfileIDSpan.innerHTML = '#' + audio_json[abtestIndex]['token']['id'];
+                tokenHref.href = audio_json[abtestIndex]['token']['url'];
             }
             else{
                 tokenfileIDSpan.innerHTML = ''
@@ -330,10 +360,10 @@
             for(let i = 0; i < labels.length; i++){
                 labels[i].classList.remove("active");
             }
-            if(mos_list[mosIndex]['rating']){
-                labels[mos_list[mosIndex]['rating']-1].classList.add("active");
+            if(audio_json[abtestIndex]['rating']){
+                labels[audio_json[abtestIndex]['rating']-1].classList.add("active");
             }
-            if(mos_list[mosIndex]['is_played']){
+            if(audio_json[abtestIndex]['first']['is_played'] && audio_json[abtestIndex]['second']['is_played']){
                 setRatingsButtonsOn()
             }
             else{
@@ -341,8 +371,8 @@
                 setRatingsButtonsOff()
             }
             /*
-            if(mos_list[mosIndex]['rating']){
-                ratingButtons.options[mos_list[mosIndex]['rating']].checked=true;
+            if(abtest_list[abtestIndex]['rating']){
+                ratingButtons.options[abtest_list[abtestIndex]['rating']].checked=true;
             }
             else{
                 for(let i = 0; i < ratingButtons.options.length; i++){
@@ -357,23 +387,23 @@
             nextButton.disabled = false;
             nextButton.style.display = "";
 
-            if (mosIndex == 0) {
+            if (abtestIndex == 0) {
                 prevButton.disabled = true;
             }
-            if (!mos_list[mosIndex]['is_played']) {
+            if (!audio_json[abtestIndex]['first']['is_played'] && !audio_json[abtestIndex]['second']['is_played']) {
                 nextButton.disabled = true;
             }
-            if (mosIndex == numMosInstances -1) {
+            if (abtestIndex == numABTuples -1) {
                 nextButton.disabled = true;
                 nextButton.style.display = "none"
             }
         }
 
         function setFinishButtonUI(){
-            if (mosIndex == numMosInstances -1 && !mos_list[mosIndex]['is_played']) {
+            if (abtestIndex == numABTuples -1 && !audio_json[abtestIndex]['first']['is_played'] && !audio_json[abtestIndex]['second']['is_played']) {
                 finishButton.disabled = true;
                 finishButton.style.display = "";
-            } else if (mosIndex == numMosInstances -1) {
+            } else if (abtestIndex == numABTuples -1) {
                 finishButton.disabled = false;
                 finishButton.style.display = "";
             } else {
@@ -396,7 +426,7 @@
         }
 
         // --------------------- Initialize UI --------------------------
-        totalIndexSpan.innerHTML = numMosInstances;
+        totalIndexSpan.innerHTML = numABTuples;
         updateUI();
 
     </script>
