--- a/mosi/views/abtest/templates/abtest_token_card.jinja
+++ b/mosi/views/abtest/templates/abtest_token_card.jinja
@@ -1,11 +1,11 @@
 
-{% if mos.show_text_in_test %}
+{% if abtest.show_text_in_test %}
     <div id='tokenCard' class="card">
 {% else %}
     <div id='tokenCard' class="card d-none">
 {% endif %}
     <div class="card-body d-flex flex-column justify-content-between">
-        <h3 class='card-text' id='tokenText'>{{mos_list[0].text}}</h3>
+        <h3 class='card-text' id='tokenText'>{{abtest_list[0].text}}</h3>
         <p class='card-text mb-0'>
             <a id="tokenHref" target="_blank" rel="noopener noreferrer" href='#'><code id="tokenFileID"></code></a>
 
