--- a/mosi/views/abtest/templates/take_abtest.jinja
+++ b/mosi/views/abtest/templates/take_abtest.jinja
@@ -3,9 +3,9 @@
     <div class='row'>
         <div class='col-xl-6 offset-xl-3 col-md-8 offset-md-2 col-12'>
             <div class='card card-body'>
-                <h2>{{mos.printable_id}}</h2>
-                {% if mos.form_text %}
-                <p class="pt-2">{{ mos.form_text }}</p>
+                <h2>{{abtest.printable_id}}</h2>
+                {% if abtest.form_text %}
+                <p class="pt-2">{{ abtest.form_text }}</p>
                 {% endif %}
             </div>
         </div>
