--- a/mosi/views/abtest/templates/abtest.jinja
+++ b/mosi/views/abtest/templates/abtest.jinja
@@ -5,8 +5,8 @@
 {% block header_content %}
     <p>Þetta próf sýnir {% if not abtest.show_text_in_test %}<span class="text-warning">ekki</span> {% endif %}texta setningar sem hlustað er á</p>
     <div class="float-left text-warning">
-        {% if not abtest.number_selected > 0%}
-            {% if abtest_list | length == 0%}
+        {% if not abtest.number_selected > 0 %}
+            {% if abtest_list | length == 0 %}
                 <span id="additional-info">Hladdu upp setningum til að búa til AB próf</span>
             {% else %}
                 <span id="additional-info">Veldu setningar til að nota í prófinu</span>
@@ -19,7 +19,7 @@
 
 {%block buttons %}
     {% if current_user.is_admin() %}
-        <button class="btn btn-secondary btn-sm float-right mr-2 mt-2" type="button" data-toggle='modal', data-target='#uploadMOSModal'>
+        <button class="btn btn-secondary btn-sm float-right mr-2 mt-2" type="button" data-toggle='modal', data-target='#uploadABModal'>
             {{macros.btn_icon('upload', 'r')}}
             Hlaða upp
         </button>
@@ -117,7 +117,7 @@
 {% endblock %}
 
 {% block modals %}
-    <div class="modal fade" id='uploadMOSModal' tabindex="-1">
+    <div class="modal fade" id='uploadABModal' tabindex="-1">
         <form method='POST' enctype="multipart/form-data">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -129,10 +129,10 @@
                 </div>
                 <div class="modal-body">
                     <p>
-                        Athugaðu að hlaða þarf upp <code>.zip</code> skrá sem inniheldur möppu sem heitir <code>audio</code> og skrá sem heitir <code>index.tsv</code>.
+                        Athugaðu að hlaða þarf upp <code>.zip</code> skrá sem inniheldur möppu sem heitir <code>audio</code> og skrá sem heitir <code>index.csv</code>.
                         <code>Audio</code> mappan inniheldur allar talgervingarnar á <code>.wav</code> formi og <code>index.tsv</code> tengir auðkenni hverrar MOS-setningar við nafn
                         talgervingarinnar í audio möppunni. <br> <br>
-                        Í <code>index.tsv</code> eru eftirfarandi dálkar:
+                        Í <code>index.csv</code> eru eftirfarandi dálkar:
                         <li>(Áskilið) Dálkur 1 er nafn upptöku í <code>audio</code> möppunni.</li>
                         <li>(Áskilið) Dálkur 2 er <code>R</code> ef setningin er upptaka en <code>S</code> ef setningin er talgerving.</li>
                         <li>(Áskilið) Dálkur 3 er setningin sjálf. </li>
@@ -260,9 +260,19 @@
         $(".abtest-check-button").on('change', function(){
             var id = this.name.split('abtest-')[1];
             updateUI()
-            updateMOS(this)
+            updateAB(this)
         });
-
+        
+        $(".abtest-permutation-btn").on('click', function(){
+            var info = {'abtest_id': this.name.split('-')[1],
+                        'first': this.name.split('-')[2],
+                        'second': this.name.split('-')[3],
+                        'ref': this.name.split('-')[4],
+                        'url': this.id
+                            }
+            
+            updatePermutation(info, this)
+        });
 
         function updateUI(){
             var elements = document.getElementsByClassName("abtest-check-button");
@@ -287,12 +297,21 @@
             }
         }
 
-        function updateMOS(form) {
+        function updatePermUI(btn){
+            btn.classList.remove("abtest-permutation-btn");
+            btn.classList.remove("btn-primary");
+            btn.classList.add("btn-success");
+            btn.getElementsByClassName("fa")[0].classList.remove('fa-square')
+            btn.getElementsByClassName("fa")[0].classList.add('fa-check-square')
+        }
+
+        function updateAB(form) {
             var xhr = new XMLHttpRequest();
             xhr.onload = function(e) {
                 if(this.readyState === XMLHttpRequest.DONE) {
                     if(xhr.status == '200'){
                         var response = JSON.parse(xhr.responseText);
+                        
                     } else{
                         promptError("Villa koma upp:", xhr.responseText, "");
                     }
@@ -302,6 +321,30 @@
 
             xhr.open("POST", form.action, true);
             xhr.send(formData);
+        }
+
+        function updatePermutation(info, btn) {
+
+            var xhr = new XMLHttpRequest();
+            xhr.onload = function(e) {
+                if(this.readyState === XMLHttpRequest.DONE) {
+                    if(xhr.status == '200'){
+                        var response = JSON.parse(xhr.responseText);
+                        updatePermUI(btn)
+                    } else{
+                        promptError("Villa koma upp:", xhr.responseText, "");
+                    }
+                }
+            }
+            let formData = new FormData();
+            formData.append('first', info['first'])
+            formData.append('second', info['second'])
+            formData.append('ref', info['ref'])
+            formData.append('abtest_id', info['abtest_id'])
+            
+            xhr.open("GET", info['url'], true);
+            xhr.send( null );
+            //xhr.send(formData);
         }
 
         $('#files').on('change',function(){
