--- a/mosi/views/abtest/templates/abtest_permutation_table.jinja
+++ b/mosi/views/abtest/templates/abtest_permutation_table.jinja
@@ -44,15 +44,30 @@
                     </td>
                     <td>
                         {% if p | length == 2 %}
-                            <a href='{{url_for("abtest.create_tuple", ab_id=abtest.id, first_id=data["instances"][p[0]].id, second_id=data["instances"][p[1]].id)}}' class='btn btn-primary btn-sm float-right mr-2 mt-2'>
-                                {{macros.btn_icon('download', 'r')}}
-                                Velja
-                            </a>
+                            
+                            {% if abtest.does_tuple_exist(data["instances"][p[0]].id, data["instances"][p[1]].id) %}
+                                <button type='button' class='btn btn-sm btn-success'>
+                                    {{macros.btn_icon('check-square', 'r')}}
+                                    Valið
+                                </button>
+                            {% else %}
+                                <a name='perm-abtest.id-data["instances"][p[0]].id-data["instances"][p[1]].id-None' id='{{url_for("abtest.create_tuple", ab_id=abtest.id, first_id=data["instances"][p[0]].id, second_id=data["instances"][p[1]].id)}}' class='btn btn-primary btn-sm mr-2 mt-2 abtest-permutation-btn'>
+                                    {{macros.btn_icon('square', 'r')}}
+                                    Velja
+                                </a>
+                            {% endif %}
                         {% else %}
-                            <a href='{{url_for("abtest.create_tuple", ab_id=abtest.id, first_id=data["instances"][p[0]].id, second_id=data["instances"][p[1]].id, ref_id=data["instances"][p[2]].id)}}' class='btn btn-primary btn-sm float-right mr-2 mt-2'>
-                                {{macros.btn_icon('download', 'r')}}
-                                Velja
-                            </a>
+                            {% if abtest.does_tuple_exist(data["instances"][p[0]].id, data["instances"][p[1]].id, data["instances"][p[2]].id) %}
+                                <button type='button' class='btn btn-sm btn-success'>
+                                    {{macros.btn_icon('check-square', 'r')}}
+                                    Valið
+                                </button>
+                            {% else %}
+                                <a name='perm-abtest.id-data["instances"][p[0]].id-data["instances"][p[1]].id-ref_id=data["instances"][p[2]].id' id='{{url_for("abtest.create_tuple", ab_id=abtest.id, first_id=data["instances"][p[0]].id, second_id=data["instances"][p[1]].id, ref_id=data["instances"][p[2]].id)}}' class='btn btn-primary btn-sm mr-2 mt-2 abtest-permutation-btn'>
+                                    {{macros.btn_icon('square', 'r')}}
+                                    Velja
+                                </a>
+                            {% endif %}
                         {% endif %}
                        
                     </td>
