--- a/mosi/views/mos/templates/mos.jinja
+++ b/mosi/views/mos/templates/mos.jinja
@@ -115,10 +115,10 @@
                 </div>
                 <div class="modal-body">
                     <p>
-                        Athugaðu að hlaða þarf upp <code>.zip</code> skrá sem inniheldur möppu sem heitir <code>audio</code> og skrá sem heitir <code>index.tsv</code>.
+                        Athugaðu að hlaða þarf upp <code>.zip</code> skrá sem inniheldur möppu sem heitir <code>audio</code> og skrá sem heitir <code>index.csv</code>.
                         <code>Audio</code> mappan inniheldur allar talgervingarnar á <code>.wav</code> formi og <code>index.tsv</code> tengir auðkenni hverrar MOS-setningar við nafn
                         talgervingarinnar í audio möppunni. <br> <br>
-                        Í <code>index.tsv</code> eru eftirfarandi dálkar:
+                        Í <code>index.csv</code> eru eftirfarandi dálkar:
                         <li>(Áskilið) Dálkur 1 er nafn upptöku í <code>audio</code> möppunni.</li>
                         <li>(Áskilið) Dálkur 2 er <code>R</code> ef setningin er upptaka en <code>S</code> ef setningin er talgerving.</li>
                         <li>(Áskilið) Dálkur 3 er setningin sjálf. </li>
